--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul class="nav-list">
         <li><a href="#section-home">Home</a></li>
         <li><a href="#section-gallery">Gallery</a></li>
-        <li><a href="#section-products">Products</a></li>
+        <li><a href="#products-section">Products</a></li>
       </ul>
     </nav>
   </header>
