--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Should container seo description here  -->
-  <!-- Learn about Flexbox, Accessibility and SEO best practices. -->
   <title>SEO &amp; Flexbox Best Practices</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -28,9 +26,9 @@
     <h2>Gallery</h2>
     <hr>
     <div class="gallery-container">
-      <div class="gallery-item"><img src="images/resource-tti-10.webp" alt="Gallery Image 1"></div>
+      <div class="gallery-item"><img src="images/resource-tti-10.webp" alt=""></div>
       <div class="gallery-item"><img src="images/resource-tti-13.webp" alt=""></div>
-      <div class="gallery-item"><img src="images/resource-tti-15.avif" alt="Gallery Image 3"></div>
+      <div class="gallery-item"><img src="images/resource-tti-15.avif" alt=""></div>
     </div>
   </div>
   <div id="section-products">
