--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <ul class="nav-list">
         <li><a href="#section-home">Home</a></li>
         <li><a href="#section-gallery">Gallery</a></li>
-        <li><a href="#products-section">Products</a></li>
+        <li><a href="#section-products">Products</a></li>
       </ul>
     </nav>
   </header>
-
+<main>
   <div id="section-home">
   </div>
   <div id="section-gallery">
@@ -36,7 +36,7 @@
     <hr>
     <div class="product-container">
       <div class="product">
-        <img src="images/magnific-robot.webp" alt="">
+        <img src="images/magnific-robot.webp" alt="magnific-robot.webp">
         <div class="product-info">
           <h1>Product 1</h1>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="product">
-        <img src="images/voting-rights-american-election_23-2151841484.avif" alt="">
+        <img src="images/voting-rights-american-election_23-2151841484.avif" alt="voting-rights-american-election_23-2151841484.avif">
         <div class="product-info">
           <h1>Product 2</h1>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class="product">
-        <img src="images/resource-tti-17.avif" alt="">
+        <img src="images/resource-tti-17.avif" alt="resource-tti-17.avif">
         <div class="product-info">
           <h1>Product 3</h1>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="product">
-        <img src="images/resource-tti-14.avif" alt="">
+        <img src="images/resource-tti-14.avif" alt="resource-tti-14.avif">
         <div class="product-info">
           <h1>Product 4</h1>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="product">
-        <img src="images/resource-tti-13.webp" alt="">
+        <img src="images/resource-tti-13.webp" alt="resource-tti-13.webp">
         <div class="product-info">
           <h1>Product 5</h1>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="product">
-        <img src="images/resource-tti-10.webp" alt="">
+        <img src="images/resource-tti-10.webp" alt="resource-tti-10.webp">
         <div class="product-info">
           <h1>Product 6</h1>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis aspernatur ratione tempore quidem
@@ -103,10 +103,11 @@
       </div>
     </div>
   </div>
+</main>
 
-  <div class="footer">
+  <footer>
     <p>&copy; 2025 Flexbox, Accessibility &amp; SEO</p>
-  </div>
+  </footer>
 </body>
 
 </html>
