add code update

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <h2>Gallery</h2>
     <hr>
     <div class="gallery-container">
-      <div class="gallery-item"><img src="images/resource-tti-10.webp" alt=""></div>
-      <div class="gallery-item"><img src="images/resource-tti-13.webp" alt=""></div>
-      <div class="gallery-item"><img src="images/resource-tti-15.avif" alt=""></div>
+      <div class="gallery-item"><img src="images/resource-tti-10.webp" alt="resource-tti-10.webp"></div>
+      <div class="gallery-item"><img src="images/resource-tti-13.webp" alt="resource-tti-13.webp"></div>
+      <div class="gallery-item"><img src="images/resource-tti-15.avif" alt="resource-tti-15.avif"></div>
     </div>
   </div>
   <div id="section-products">
